--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "webpack-dev-server": "^1.6.5"
   },
   "dependencies": {
+    "file-loader": "^0.8.1",
+    "material-ui": "^0.1.27",
     "react": "^0.12.0",
-    "material-ui": "^0.1.27"
+    "url-loader": "^0.5.5"
   }
 }
