--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-tools": "^0.12.0",
     "style-loader": "^0.8.1",
     "webpack": "^1.4.7",
-    "webpack-dev-server": "^1.6.5"
+    "webpack-dev-server": "^1.6.5",
+    "file-loader": "^0.8.1",
+    "url-loader": "^0.5.5"
   },
   "dependencies": {
-    "file-loader": "^0.8.1",
-    "material-ui": "^0.1.27",
-    "react": "^0.12.0",
-    "url-loader": "^0.5.5"
+    "express": "^4.10.2",
+    "flux": "^2.0.1",
+    "moment": "^2.8.3",
+    "react": "^0.12.0"
   }
 }
