--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "scripts": {
     "postinstall": "bower install",
-    "build": "jsx --harmony ./src ./lib",
-    "build_client": "webpack -p --config ./client/webpack.config.js",
-    "dev": "webpack --config ./client/webpack.config.js && webpack-dev-server --config ./client/webpack.config.js --inline --hot --content-base ./public"
+    "build": "webpack --config ./client/webpack.config.js",
+    "dev": "webpack --config ./client/webpack.config.js && webpack-dev-server --config ./client/webpack.config.js --inline --hot --content-base ./public",
+    "start": "npm run build && node server/server"
   },
   "keywords": [
     "React.js",
@@ -27,11 +27,24 @@
     "url-loader": "^0.5.5"
   },
   "dependencies": {
+    "body-parser": "^1.9.2",
+    "cookie-parser": "^1.3.3",
+    "es6-shim": "^0.20.2",
     "events": "^1.0.2",
     "express": "^4.10.2",
+    "express-session": "^1.9.1",
     "flux": "^2.0.1",
+    "jsonwebtoken": "^1.1.2",
+    "keymirror": "^0.1.0",
+    "localStorage": "^1.0.3",
     "moment": "^2.8.3",
+    "morgan": "^1.5.0",
+    "node-jsx": "^0.12.0",
     "object-assign": "^1.0.0",
-    "react": "^0.12.0"
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
+    "react": "^0.12.0",
+    "react-router": "^0.10.2",
+    "superagent": "^0.21.0"
   }
 }
