--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "keymirror": "^0.1.0",
     "localStorage": "^1.0.3",
     "moment": "^2.8.3",
+    "mongoose": "^3.8.19",
     "morgan": "^1.5.0",
     "node-jsx": "^0.12.0",
     "object-assign": "^1.0.0",
@@ -45,6 +46,8 @@
     "passport-facebook": "^1.0.3",
     "react": "^0.12.0",
     "react-router": "^0.10.2",
-    "superagent": "^0.21.0"
+    "superagent": "^0.21.0",
+    "supergoose": "^0.2.3",
+    "uid2": "0.0.3"
   }
 }
