--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "body-parser": "^1.9.2",
+    "connect-mongo": "^0.4.1",
     "cookie-parser": "^1.3.3",
     "es6-shim": "^0.20.2",
     "events": "^1.0.2",
