--- a/package.json
+++ b/package.json
@@ -15,26 +15,29 @@
     "bower": "^1.3.9",
     "css-loader": "^0.9.0",
     "expose-loader": "^0.5.3",
+    "extract-text-webpack-plugin": "^0.3.4",
+    "file-loader": "^0.8.1",
     "html-webpack-plugin": "^1.1.0",
     "jsx-loader": "^0.12.0",
     "less-loader": "^0.7.7",
     "react-material": "0.0.2-alpha",
     "react-tools": "^0.12.0",
     "style-loader": "^0.8.1",
+    "url-loader": "^0.5.5",
     "webpack": "^1.4.7",
-    "webpack-dev-server": "^1.6.5",
-    "file-loader": "^0.8.1",
-    "url-loader": "^0.5.5"
+    "webpack-dev-server": "^1.6.5"
   },
   "dependencies": {
     "body-parser": "^1.9.2",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "^1.3.3",
+    "es5-shim": "^4.0.3",
     "es6-shim": "^0.20.2",
     "events": "^1.0.2",
     "express": "^4.10.2",
     "express-session": "^1.9.1",
     "flux": "^2.0.1",
+    "html5shiv": "^3.7.2",
     "jsonwebtoken": "^1.1.2",
     "keymirror": "^0.1.0",
     "localStorage": "^1.0.3",
