--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "React"
   ],
   "devDependencies": {
+    "async": "^0.9.0",
     "bower": "^1.3.9",
     "css-loader": "^0.9.0",
     "expose-loader": "^0.5.3",
